fix: 파일 경로를 상대 경로로 수정, 파일 입력스트림으로 입력하도록 수정